# voicecraft

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/voicecraft/: __init__.py  audio.py  cli.py  config.py  export.py  extractor.py  model_manager.py  optimizer.py  recorder.py  synthesizer.py  translator.py
tests/: conftest.py  test_audio.py  test_export.py  test_extractor.py  test_optimizer.py  test_synthesizer.py
